force-app/main/default/objects/Error_Log__c/Error_Log__c.object-meta.xml
<CustomObject>
    <description>Persistent, queryable record of failures from the trigger framework and async tail. Written via the Error_Event__e platform event so it survives transaction rollback.</description>
    <label>Error Log</label>
    <pluralLabel>Error Logs</pluralLabel>
    <nameField><label>Error Log Number</label><type>AutoNumber</type><displayFormat>EL-{00000000}</displayFormat></nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>