force-app/main/default/objects/Error_Log__c/fields/Action_Name__c.field-meta.xml
<CustomField>
    <fullName>Action_Name__c</fullName>
    <label>Action Name</label>
    <type>Text</type>
    <length>120</length>
    <description>The action/class that failed.</description>
</CustomField>