force-app/main/default/objects/Error_Log__c/fields/Context__c.field-meta.xml
<CustomField>
    <fullName>Context__c</fullName>
    <label>Context</label>
    <type>Text</type>
    <length>40</length>
    <description>Lifecycle phase: Before_Insert, After_Update, Async_Notification, etc.</description>
</CustomField>