force-app/main/default/objects/Error_Log__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <label>Record Id</label>
    <type>Text</type>
    <length>18</length>
    <description>Id of the record that failed. Text (not a lookup) so it works across any sObject and survives rollback.</description>
</CustomField>