force-app/main/default/objects/Error_Log__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
        <value><fullName>Info</fullName><default>false</default><label>Info</label></value>
        <value><fullName>Warning</fullName><default>false</default><label>Warning</label></value>
        <value><fullName>Error</fullName><default>true</default><label>Error</label></value>
    </valueSetDefinition></valueSet>
</CustomField>