force-app/main/default/objects/Error_Log__c/fields/SObject_Type__c.field-meta.xml
<CustomField>
    <fullName>SObject_Type__c</fullName>
    <label>SObject Type</label>
    <type>Text</type>
    <length>80</length>
</CustomField>