force-app/main/default/objects/Error_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet><valueSetDefinition><sorted>false</sorted>
        <value><fullName>New</fullName><default>true</default><label>New</label></value>
        <value><fullName>Retrying</fullName><default>false</default><label>Retrying</label></value>
        <value><fullName>Resolved</fullName><default>false</default><label>Resolved</label></value>
        <value><fullName>Ignored</fullName><default>false</default><label>Ignored</label></value>
    </valueSetDefinition></valueSet>
</CustomField>