force-app/main/default/objects/Error_Log__c/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <label>Transaction Id</label>
    <type>Text</type>
    <length>40</length>
    <description>Request id tying together all errors from one transaction.</description>
</CustomField>